# MLOps

./: mlflow.db  pyproject.toml
artifacts/zen_of_python:v1/: zen.txt
data/: wandb.txt
src/exercises/: argparser_loguru.py  argparser_loguru_udacity.py  constants.py  demo_versioning_data.py  use_artifact.py
src/exercises/upload_artifact/: MLproject  conda.yaml  constants.py  inspect_project.py  log_function.py  upload_artifact.py
src/iris_exercise/: MLproject  conda.yml  config.yaml  link_components_mlflow.md  main.py
src/iris_exercise/download_data/: MLproject  conda.yml  download_data.py
src/iris_exercise/process_data/: MLproject  clean_data.csv  conda.yml  logger_function.py  process_data.py
wandb/: latest-run
wandb/run-20260304_103424-76l8vygj/: run-76l8vygj.wandb
wandb/run-20260304_103424-76l8vygj/files/: config.yaml  wandb-metadata.json
wandb/run-20260304_111138-xuq0yo1k/: run-xuq0yo1k.wandb
wandb/run-20260304_111138-xuq0yo1k/files/: config.yaml  wandb-metadata.json
wandb/run-20260304_111207-n7bfdbyx/: run-n7bfdbyx.wandb
wandb/run-20260304_111207-n7bfdbyx/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260304_144336-xuwxn40n/: run-xuwxn40n.wandb
wandb/run-20260304_144336-xuwxn40n/files/: config.yaml  wandb-metadata.json
wandb/run-20260304_144848-25zyi904/: run-25zyi904.wandb
wandb/run-20260304_144848-25zyi904/files/: config.yaml  wandb-metadata.json
wandb/run-20260304_151657-ldoonpq2/: run-ldoonpq2.wandb
wandb/run-20260304_151657-ldoonpq2/files/: config.yaml  wandb-metadata.json
(+28 files in other folders)
